--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,17 @@ spring.application.name=ecommerce
 
 server.port=5454
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
+#db specific properties
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:ecommerce}
-spring.datasource.username=root
-spring.datasource.password=DB_PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:2003}
 
+
+#ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 
 razorpay.api.key=rzp_test_8lq7ZImS5IPj8V
 razorpay.api.secret=JHv0VgGLet2bBg9SbdKGf6lC
