Update Razorpay API credentials in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-razorpay.api.key=rzp_test_8lq7ZImS5IPj8V
-razorpay.api.secret=JHv0VgGLet2bBg9SbdKGf6lC
-
-
+razorpay.api.key=RAZORPAY_API
+razorpay.api.secret=RAZORPAY_API_SECRET
