Update Razorpay API credentials to use environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-razorpay.api.key=RAZORPAY_API
-razorpay.api.secret=RAZORPAY_API_SECRET
+razorpay.api.key=${RAZORPAY_API}
+razorpay.api.secret=${RAZORPAY_API_SECRET}
