--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.show-sql=true
 
 razorpay.api.key=${RAZORPAY_API}
 razorpay.api.secret=${RAZORPAY_API_SECRET}
+
+
+website=http://localhost:3000/payment/
