--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,20 +2,17 @@ spring.application.name=ecommerce
 
 server.port=5454
 
-#db specific properties
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:ecommerce}
+# db specific properties
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:ecommerce}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:2003}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:2003}
 
-
-#ORM s/w specific properties
+# ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
 
 razorpay.api.key=${RAZORPAY_API}
 razorpay.api.secret=${RAZORPAY_API_SECRET}
 
-
-website=http://localhost:3000/payment/
+website=${LINK:http://localhost:3000/payment/}
